dependency maintenance: updating JUnit 4.12 -> 5.3.1
migrated to new junit major version
general cleanup of all tests